syntax = "proto3";
package response;
option go_package = "douyin/proto/video/response";
import "user/response/response.proto";

message douyin_feed_response {
  repeated Video video_list = 1;
  int64 next_time = 2;
  int32 code = 3;
}

message douyin_publish_action_response {
  int32 code = 3;
}

message douyin_publish_list_response {
  repeated Video video_list = 1;
  int32 code = 3;
}

message douyin_judge_video_author_response {
  int64 author_id = 1;
  int32 code =  3;
  bool is_v = 4;
  bool is_active = 5;
}

message douyin_push_v_active_favorite_video_response {
  int32 code = 1;
}

message douyin_delete_v_active_favorite_video_response {
  int32 code = 1;
}

message douyin_get_v_active_favorite_video_response {
  repeated Simple_Video video_list = 1;
  int32 code = 2;
}

message douyin_get_video_list_response {
  repeated Simple_Video video_list = 1;
  int32 code = 2;
}

message Simple_Video {
  int64 id = 1;
  int64 user_id = 2;
  string play_url = 3;
  string cover_url = 4;
  string title = 8;
}

message Video {
  int64 id = 1;
  response.User author = 2;
  string play_url = 3;
  string cover_url = 4;
  int64 favorite_count = 5;
  int64 comment_count = 6;
  bool is_favorite = 7;
  string title = 8;
}

message douyin_push_v_info_init_response {
  int32 code = 1;
  repeated int64 video_id_list = 2;
}

message douyin_push_active_info_init_response {
  int32 code = 2;
}

message douyin_get_user_publish_video_count_response {
  int64 count = 1;
  int32 code = 2;
}

message douyin_get_user_publish_video_count_list_response {
  repeated int64 count = 1;
  int32 code = 2;
}